# sweetpea

./: .gitignore  README.md  find_assignment_for_60_of_120.cnf  gen_k_of_n_results.sh  gen_popcount_results.sh  psychocnf.cabal  run_example.sh  run_tests.sh  stack.yaml  sweetpea.cabal
app/: Decode.hs  EndToEnd.hs  ExperimentToRun.hs  Main.hs  MinimalExample.hs  SamplingExample.hs  SystemTester.hs  TaskSwitching.hs
constraints/: Minimal.spec  Strupe.spec  Task_Switching.spec
generated_cnfs/: half_adder_test.cnf  sample_output.cnf
generated_tests/: halfAdder_0.cnf  halfAdder_1.cnf  halfAdder_1.sol  halfAdder_2.cnf  halfAdder_2.sol  halfAdder_3.cnf
notes/: Frontend_scratch.hs  IssuesWithSampling.hs  VerifyingCompilerWriteUp.md  adder-notes  how_to_zeropad_on_popcount.txt  scratch.txt  specifications.markdown  wolfram_doubleimplies.txt
notes/parser_interface/: big_example.txt  big_example_notes.txt  haskell-frontend-spec.hs  haskell_like_interface.txt  minimal.hs  minimal_example.txt  task_switching_example.txt
src/: CodeGen.hs  Compiler.hs  DataStructures.hs  FrontEnd.hs  FrontEndSugar.hs  HL_to_IL.hs  HLtoIL.hs  IL_to_LL.hs  ILtoLL.hs  Parser.hs  ParserDS.hs  Specifier.hs  StatefulCompiler.hs  SweetPeaCore.hs  Testers.hs  Validator.hs
test/: README  Spec.hs  popcount_tests.sh  test_halfandfull_adder.sh
test/generated_cnfs/: Minimal.cnf  example.cnf  simple_example.cnf
test/generated_tests/: fullAdder_0.cnf  fullAdder_0.sol  fullAdder_1.cnf  fullAdder_1.sol  fullAdder_2.cnf  fullAdder_2.sol  fullAdder_3.cnf  fullAdder_3.sol  fullAdder_4.cnf  fullAdder_4.sol  fullAdder_5.cnf  fullAdder_5.sol  fullAdder_6.cnf  fullAdder_6.sol  fullAdder_7.cnf  fullAdder_7.sol  halfAdder_0.cnf  halfAdder_0.sol  halfAdder_1.cnf  halfAdder_2.cnf  halfAdder_2.sol  halfAdder_3.cnf  halfAdder_3.sol
