name:                psychocnf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anniecherk/psychocnf#readme
license:             BSD3
license-file:        LICENSE
author:              Annie Cherkaev
maintainer:          annie.cherk@gmail.com
copyright:           2017 Annie Cherkaev
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Compiler, Testers, Parser, StatefulCompiler
                     , Specifier, CodeGen, Validator
  build-depends:       base >= 4.7 && < 5
                     , tuple
                     , aeson
                     , text
                     , bytestring
                     , transformers
                     , random
                     -- , directory -- -1.3.1.1
  default-language:    Haskell2010

executable cnf
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , psychocnf
                     , directory
                     , split
  default-language:    Haskell2010

test-suite cnf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , psychocnf
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/psychocnf
