name:                sweetpea
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anniecherk/sweetpea#readme
license:             BSD3
license-file:        LICENSE
author:              Annie Cherkaev
maintainer:          annie.cherk@gmail.com
copyright:           2017 Annie Cherkaev
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FrontEnd
                     , StatefulCompiler, DataStructures
                     , FrontEndSugar
                     , Specifier, CodeGen, Validator, Testers
  build-depends:       base >= 4.7 && < 5
                     , tuple
                     , text
                     , bytestring
                     , transformers
                     , random
                     , containers
                     , hatt
  default-language:    Haskell2010

executable system-test
  hs-source-dirs:      app
  main-is:             SystemTester.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sweetpea
                     , directory
                     , split
  default-language:    Haskell2010

executable end-to-end
  hs-source-dirs:      app
  main-is:             EndToEnd.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sweetpea
                     , directory
                     , split
  default-language:    Haskell2010

executable decode
  hs-source-dirs:      app
  main-is:             Decode.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sweetpea
                     , directory
                     , split
  default-language:    Haskell2010

test-suite unitTests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sweetpea
                     , containers
                     , tasty
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-hunit
                     , transformers

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anniecherk/sweetpea
